# MisterMoney

./: .env.example  .gitignore  AUDIT_REPORT.md  README.md  SPEC.md  SPRINT0_SUMMARY.md  SPRINT1_SUMMARY.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  SPRINT5_SUMMARY.md  SPRINT7_SUMMARY.md  SPRINT8_SUMMARY.md  SPRINT9_SUMMARY.md  pyproject.toml  test_pmm2_universe.py  test_scorer.py  test_sprint7.py  test_sprint9_shadow.py
.github/workflows/: verify.yml
config/: default.yaml  prod.yaml
data/paper/: paper_arbs.jsonl  paper_pnl.jsonl  paper_quotes.jsonl  paper_trades.jsonl
data/shadow/: shadow_2026-03-07.jsonl
docs/: FINAL-RELEASE-READINESS-AUDIT.md  MASTER-FIX-PLAN.md  MISTERMONEY-DATA-SPINE-PHASE0-NOTE.md  MISTERMONEY-DATA-SPINE-SPEC.md  MISTERMONEY-DATA-SPINE-WBS.md  PHASES-1-5-DELIVERY-SUMMARY.md  PMM-2-SPEC.md  PMM-2-WBS.md  PMM2-CANARY-5PCT-CHECKLIST.md  RELEASE-READINESS-PLAN.md  RUNBOOK.md  Research Paper 1.md  Research paper 2.md  SELL-LOGIC-SPEC.md  V3-SPEC.md  V3-WBS.md  V4-SPEC.md  architecture-thesis.md
pmm1/: logging.py  main.py  notifications.py  ops.py  settings.py
pmm1/analytics/: attribution.py  carry_tracker.py  edge_tracker.py  fv_calibrator.py  market_profitability.py  markout_tracker.py  metrics.py  pnl.py  post_mortem.py  resolution_recorder.py  signal_value.py  spread_optimizer.py  var_calculator.py
pmm1/api/: clob_private.py  clob_public.py  data_api.py  gamma.py  geoblock.py  rewards.py  scoring.py
pmm1/backtest/: queue_model.py  recorder.py  replay.py  simulator.py
pmm1/checks/: ctf_approval.py
pmm1/execution/: batcher.py  mutation_guard.py  order_manager.py  reconciler.py  tick_rounding.py
pmm1/materializers/: __init__.py  book_snapshot_fact.py  canary_cycle_fact.py  fill_fact.py  order_fact.py  quote_fact.py  shadow_cycle_fact.py
pmm1/math/: __init__.py  changepoint.py  ensemble.py  extremize.py  kelly.py  validation.py
pmm1/paper/: __init__.py  engine.py  logger.py
pmm1/recorder/: __init__.py  book_recorder.py  fill_recorder.py
pmm1/risk/: correlation.py  drawdown.py  kill_switch.py  limits.py  resolution.py
pmm1/state/: books.py  heartbeats.py  inventory.py  orders.py  positions.py
pmm1/storage/: database.py  parquet.py  postgres.py  redis.py  schema.sql  spine.py
pmm1/strategy/: binary_parity.py  cross_event_arb.py  directional.py  exit_manager.py  fair_value.py  features.py  fill_escalation.py  llm_reasoner.py  market_context.py  market_sanity.py  neg_risk_arb.py  neg_risk_arb_v2.py  news_fetcher.py  quote_engine.py  reasoner_memory.py  rewards.py  universe.py
pmm1/tools/: __init__.py  backfill_spine.py  export_data.py  healthcheck.py  rebuild_spine_facts.py
pmm1/ws/: market_ws.py  user_ws.py
pmm2/: __init__.py  config.py  v1_views.py
pmm2/allocator/: README.md  __init__.py  allocator.py  (+6 more)
scripts/: debug_gamma_fields.py
tools/: dashboard.py
v3/: SPRINT3_REPORT.md  SPRINT4_REPORT.md  SPRINT6_REPORT.md  __init__.py  v3-offline.service  v3-shadow.service
(+197 files in other folders)
