[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmm1"
version = "0.1.0"
description = "PMM-1 — Polymarket Production Market-Making Bot"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "py-clob-client>=0.15.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "eth-account>=0.11.0",
    "web3>=6.15.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2.0",
    "mypy>=1.8",
]

[project.scripts]
pmm1 = "pmm1.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
